intTests/test_parse_errors/parser005.log.good
 Loading file "parser005.saw"
 Stack trace:
   (builtin) (at top level)
Parse error at parser005.saw:2:5-2:15: Unexpected `rebindable'

FAILED
